--- a/src/docs/asciidoc/api/product/product.adoc
+++ b/src/docs/asciidoc/api/product/product.adoc
@@ -8,3 +8,14 @@ include::{snippets}/product-create/request-fields.adoc[]
 ==== HTTP Response
 include::{snippets}/product-create/http-response.adoc[]
 include::{snippets}/product-create/response-fields.adoc[]
+
+
+[[Product-select]]
+=== 판매중인 상품 조회
+
+==== HTTP Request
+include::{snippets}/product-select/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/product-select/http-response.adoc[]
+include::{snippets}/product-select/response-fields.adoc[]
